fix khai's code

--- a/CineSeats/members/22127188/22127188.html
+++ b/CineSeats/members/22127188/22127188.html
@@ -17,7 +17,7 @@
             <button class="Facebook-button" onclick="window.location.href='https://www.facebook.com/quockhanh41/';">
                 Link to Facebook
             </button>
-            <p>< href="../../default.html">Return to Group Page</a></p>
+            <p><a href="../../default.html">Return to Group Page</a></p>
         </div>
 
         <!-- Profile Form (right of the image) -->
