rm css from folder 188, add default css, modify defaul html

--- a/CineSeats/members/22127188/22127188.html
+++ b/CineSeats/members/22127188/22127188.html
@@ -5,46 +5,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profile Page</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../../default.css">
 </head>
 
 <body>
-    <div class="profile-container">
+    <div class="profile-container_22127188">
         <!-- Profile Image (outside of the form) -->
-        <div class="profile-header">
-            <img src="./images/profile.jpg" alt="Profile Image" class="profile-image">
+        <div class="profile-header_22127188">
+            <img src="./images/profile.jpg" alt="Profile Image" class="profile-image_22127188">
             <!-- Facebook Button placed below the image -->
-            <button class="Facebook-button" onclick="window.location.href='https://www.facebook.com/quockhanh41/';">
+            <button class="Facebook-button_22127188"
+                onclick="window.location.href='https://www.facebook.com/quockhanh41/';">
                 Link to Facebook
             </button>
             <p><a href="../../default.html">Return to Group Page</a></p>
         </div>
 
         <!-- Profile Form (right of the image) -->
-        <form class="profile-info">
+        <form class="profile-info_22127188">
             <h2>My Profile</h2>
 
-            <div class="input-group">
+            <div class="input-group_22127188">
                 <label>Full Name</label>
                 <input type="text" value="Nguyen Quoc Khanh" disabled>
             </div>
 
-            <div class="input-group">
+            <div class="input-group_22127188">
                 <label>Student ID</label>
                 <input type="text" value="22127188" disabled>
             </div>
 
-            <div class="input-group">
+            <div class="input-group_22127188">
                 <label>Date of Birth</label>
                 <input type="text" value="04/01/2004" disabled>
             </div>
 
-            <div class="input-group">
+            <div class="input-group_22127188">
                 <label>Phone</label>
                 <input type="text" value="0865436897" disabled>
             </div>
 
-            <div class="input-group">
+            <div class="input-group_22127188">
                 <label>Email Address</label>
                 <input type="text" value="nqkhanh22@clc.fitus.edu.vn" disabled>
             </div>
