Add TBKiet profile, modify default.css file(background color)

--- a/CineSeats/members/22127223/22127223.html
+++ b/CineSeats/members/22127223/22127223.html
@@ -1,1 +1,56 @@
- 
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Profile Page</title>
+    <link rel="stylesheet" href="../../default.css">
+</head>
+
+<body>
+    <div class="profile-container_22127223">
+        <!-- Profile Image and Facebook Button -->
+        <div class="profile-header_22127223">
+            <img src="./images/profile.png" alt="Profile Image" class="profile-image_22127223">
+            <!-- Facebook Button placed below the image -->
+            <button class="Facebook-button_22127223"
+                onclick="window.location.href='https://www.facebook.com/dlima.messi';">
+                Visit Facebook Profile
+            </button>
+            <p><a href="../../default.html" style="color: #3b5998; font-weight: bold;">Return to Group Page</a></p>
+        </div>
+
+        <!-- Profile Form -->
+        <form class="profile-info_22127223">
+            <h2>Profile Information</h2>
+
+            <div class="input-group_22127223">
+                <label>Full Name</label>
+                <input type="text" value="Truong Bao Kiet" disabled>
+            </div>
+
+            <div class="input-group_22127223">
+                <label>Student ID</label>
+                <input type="text" value="22127223" disabled>
+            </div>
+
+            <div class="input-group_22127223">
+                <label>Date of Birth</label>
+                <input type="text" value="03/09/2004" disabled>
+            </div>
+
+            <div class="input-group_22127223">
+                <label>Phone</label>
+                <input type="text" value="0396950779" disabled>
+            </div>
+
+            <div class="input-group_22127223">
+                <label>Email Address</label>
+                <input type="text" value="tbkiet22@clc.fitus.edu.vn" disabled>
+            </div>
+        </form>
+    </div>
+</body>
+
+</html>
