--- a/CineSeats/default.html
+++ b/CineSeats/default.html
@@ -12,7 +12,7 @@
     <!-- Detailed Group Information -->
     <h2>Group Name: 3000</h2>
     <ul>
-        <li>22127188 - Nguyễn Quốc Khánh</li>\
+        <li>22127188 - Nguyễn Quốc Khánh</li>
         <li>22127223 - Trương Bảo Kiệt</li>
         <li>22127477 - Nguyễn Quang Khải</li>
         <!-- Add more members as needed -->
