modify group name

--- a/CineSeats/default.html
+++ b/CineSeats/default.html
@@ -14,7 +14,7 @@
         <hr>
         <!-- Detailed Group Information -->
         <h3 class="team">Team:</h3>
-        <h2 class="team-name">CineSeats</h2>
+        <h2 class="team-name">3000</h2>
         <div class="member-border">
             <h3 class="member">Member List: </h3>
             <div class="list-container">
