--- a/CineSeats/members/22127477/22127477.html
+++ b/CineSeats/members/22127477/22127477.html
@@ -12,7 +12,7 @@
     <div class="profile-container">
         <!-- Profile Image and Facebook Button -->
         <div class="profile-header">
-            <img src="./images/profile.jpg" alt="Profile Image" class="profile-image">
+            <img src="./images/Profile.jpg" alt="Profile Image" class="profile-image">
             <!-- Facebook Button placed below the image -->
             <button class="Facebook-button"
                 onclick="window.location.href='https://www.facebook.com/hello.minh.la.quangkhai/'">
